<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_usuario"/>
    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/txtErrorUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_password"/>
    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <TextView
        android:id="@+id/txtErrorSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">
        <TableRow>
            <Button
                android:id="@+id/btn_add_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_adduser"
                android:onClick="adicionaUsuario"/>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:onClick="validaLogin"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/txtMensagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>